service1/openshift-scripts/deployconfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    run: service1
  name: service1
  namespace: myproject
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    run: service1
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    type: Rolling
  template:
    metadata:
      labels:
        run: service1
    spec:
      containers:
        - image: 'service1:v1'
          imagePullPolicy: IfNotPresent
          name: service1
          ports:
            - containerPort: 9095
              protocol: TCP
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
