service1/openshift-scripts/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: myproject
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: "service1"
  sessionAffinity: None
  type: ClusterIP
