service1/openshift-scripts/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "service1"
spec:
  hosts:
    - "*"
  gateways:
    - service1-gateway
  http:
    - match:
        - uri:
            exact: /rest
      route:
        - destination:
            host: "service1"
            port:
              number: 8081
